--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^4.0.0",
     "ityped": "^1.0.3",
+    "mdb-react-ui-kit": "^4.0.0",
+    "mdbootstrap": "^4.20.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1",
     "react-typical": "^0.1.3",
     "typewriter-effect": "^2.18.2",
+    "uikit": "^3.14.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
