--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.12.0",
     "react-typical": "^0.1.3",
     "typewriter-effect": "^2.18.2",
     "uikit": "^3.14.3",
